# toolflow_rs

./: Cargo.toml
src/: adapter.rs  app.rs  data_cell.rs  data_file.rs  data_header.rs  filter.rs  generator.rs  join.rs  main.rs  mapping.rs  renderer.rs  wiki_page.rs  workflow.rs  workflow_node.rs  workflow_run.rs
test_data/: 8c5d1fb3-6ea8-44d1-b938-9d22f569c412.jsonl  cb1e218e-421f-46b8-a77e-eac6799ce4e4.jsonl
